fix: `thin-scrollbar` CSS mixin

--- a/styles/_mixins.scss
+++ b/styles/_mixins.scss
@@ -1,4 +1,5 @@
 @use 'helpers' as *;
+@use 'sass:selector';
 
 @mixin flex($justify: center, $align: center, $direction: null, $wrap: null) {
   display: flex;
@@ -43,13 +44,13 @@
     scrollbar-width: thin;
   }
 
-  &::-webkit-scrollbar {
+  @at-root #{selector.append(&, '::-webkit-scrollbar')} {
     width: 8px;
     height: 8px;
     background-color: hsl(0deg 50% 0% / 35%);
   }
 
-  &::-webkit-scrollbar-thumb {
+  @at-root #{selector.append(&, '::-webkit-scrollbar-thumb')} {
     background-color: hsl(0deg 50% 100% / 45%);
 
     &:hover {
